E2E-735 Add sentence type restriction to query, return pagination info